--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,16 +18,37 @@ jobs:
       cancel-in-progress: false
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
       - name: Copy Figma bundle to dist
         run: |
           rm -rf dist
-          mkdir -p dist
-          cp -R v2/* dist/
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+          mkdir -p dist/sites
+          cp -R v2/* dist/sites/
+          cat <<'HTML' > dist/index.html
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Solaire France Clone</title>
+    <style>
+      body{font-family:Arial,Helvetica,sans-serif;margin:0;padding:0;background:#f6f6f6;color:#0f172a}
+      .wrapper{max-width:640px;margin:60px auto;padding:48px 40px;background:#fff;border-radius:18px;box-shadow:0 25px 60px rgba(15,23,42,.16)}
+      h1{margin-top:0;font-size:2.2rem;color:#1a5f3f}
+      p{line-height:1.5}
+      code{background:#0f172a;color:#fff;padding:3px 6px;border-radius:6px}
+      a.button{display:inline-flex;align-items:center;justify-content:center;margin-top:32px;padding:14px 22px;border-radius:50px;text-decoration:none;font-weight:600;background:#1a5f3f;color:#fff}
+    </style>
+  </head>
+  <body>
+    <div class="wrapper">
+      <h1>Solaire France Clone</h1>
+      <p>Le site exporté depuis Figma vit dans <code>/sites</code>. GitHub Pages ne peut pas résoudre les chemins absolus (/<em>*</em>). Sans domaine racine, il faut utiliser un fournisseur comme Cloudflare Pages, Netlify ou Vercel.</p>
+      <p>Pour consulter directement la version clonée :<br><a class="button" href="https://france-demarches-solaire.pages.dev" target="_blank" rel="noopener">Ouvrir la démo Cloudflare</a></p>
+    </div>
+  </body>
+</html>
+HTML
+      - uses: actions/upload-pages-artifact@v3
         with:
           path: dist
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+      - uses: actions/deploy-pages@v4
